--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+public/img/logo-20240424124110.jpg
+public/img/logo-20240424122309.jpg
+public/img/logo-20240424122352.jpg
+.env.example
