--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ public/img/logo-20240424124110.jpg
 public/img/logo-20240424122309.jpg
 public/img/logo-20240424122352.jpg
 .env.example
+.env.example
