update tampilan fitur

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ public/img/logo-20240424122352.jpg
 .env.example
 .env.example
 .env.example
+public/img/logo-20240502025417.jpg
+public/img/logo-20240502025443.jpg
+public/img/logo-20240502041231.png
+public/img/admin.png
+public/img/admin.png
+public/img/kasir1.png
+*.png
